<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="frag_1">Fragment1</string>
    <string name="frag_2">Fragment2</string>
    <string name="frag_3">Fragment3</string>
    <string name="tab_1">R</string>
    <string name="tab_2">G</string>
    <string name="tab_3">B</string>
    <string name="album_picture">专辑封面</string>
    <string name="song_title">歌曲名</string>
    <string name="singer">歌手</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="player_setting">设置</string>
    <string name="zero_time">00:00</string>
    <string name="play_mode">播放模式</string>
    <string name="next_song">下一首</string>
    <string name="previous_song">上一首</string>
    <string name="speaker">设备</string>
    <string name="server">歌曲</string>
    <string name="setting">设置</string>
    <string name="close">关闭</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

</resources>
