<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
    
    <ImageButton 
        android:id="@+id/album_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
		android:layout_marginLeft="10dp"
		android:src="@drawable/album"
		android:scaleType="centerCrop"
		android:background="#00000000"
        android:contentDescription="@string/album_picture"/>    
        
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/album_image"
        android:layout_toEndOf="@id/album_image"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#000000" 
            android:layout_marginTop="0dp"
            android:text="@string/song_title"/>
        <TextView 
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="#000000"
            android:text="@string/singer"
            android:gravity="bottom"
            android:layout_gravity="bottom"/>
    </LinearLayout>
    
     <ImageButton 
        android:id="@+id/next_song"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/next"
        android:scaleType="centerCrop"
		android:background="#00000000"
        android:contentDescription="@string/play"/>
    
    <ImageButton 
        android:id="@+id/play_pause"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toLeftOf="@id/next_song"
        android:layout_toStartOf="@id/next_song"
    	android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/play"
        android:scaleType="centerCrop"
		android:background="#00000000"
        android:contentDescription="@string/play"/>
    
    

</RelativeLayout>
