<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        
        <ImageView 
            android:id="@+id/album_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/album"
            android:contentDescription="@string/play_mode"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_weight="0"
        android:orientation="vertical">
        
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/zero_time"
                android:gravity="center"/>
            
             <TextView 
                android:id="@+id/total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_time"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
               	android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"/>
            <SeekBar 
                android:id="@+id/time_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/current_time"
                android:layout_toEndOf="@id/current_time"
                android:layout_toLeftOf="@id/total_time"
                android:layout_toStartOf="@id/total_time"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:max="100"/>
           
            
        </RelativeLayout>
        
        <LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="60dp"
        	android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:layout_marginBottom="20dp"
        	android:layout_marginTop="20dp"
        	android:orientation="horizontal"
        	android:gravity="center_vertical"
        	android:baselineAligned="false">
        	<LinearLayout 
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:orientation="vertical">
            	<ImageButton 
            	    android:id="@+id/play_mode_button"
            	    android:layout_width="30dp"
            		android:layout_height="24dp"
            		android:src="@drawable/play_list_mode_sequent"
            		android:scaleType="fitXY"
            		android:background="#00000000"
            		android:layout_gravity="start"
            		android:contentDescription="@string/play_mode"/>
            
        	</LinearLayout>
        	<LinearLayout 
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="3">
            	<RelativeLayout 
            	    android:layout_width="fill_parent"
            	    android:layout_height="fill_parent">
            	    <ImageButton 
            	        android:id="@+id/previous_song"
            	        android:layout_width="38dp"
            			android:layout_height="38dp"
            			android:layout_alignParentLeft="true"
            			android:layout_alignParentStart="true"
            			android:src="@drawable/previous"
            			android:scaleType="centerCrop"
            			android:background="#00000000"
            			android:layout_centerVertical="true"
            			android:contentDescription="@string/previous_song"/>
            	    <ImageButton 
            	        android:id="@+id/next_song"
            	        android:layout_width="38dp"
            			android:layout_height="38dp"
            			android:layout_alignParentRight="true"
            			android:layout_alignParentEnd="true"
            			android:src="@drawable/next"
            			android:scaleType="centerCrop"
            			android:background="#00000000"
            			android:layout_centerVertical="true"
            			android:contentDescription="@string/next_song"/>
            	    <ImageButton 
            	        android:id="@+id/play_pause"
            	        android:layout_width="60dp"
            			android:layout_height="60dp"
            			android:layout_centerInParent="true"
            			android:src="@drawable/play"
            			android:scaleType="centerCrop"
            			android:background="#00000000"
            			android:contentDescription="@string/play"/>
            	    
            	</RelativeLayout>
        	</LinearLayout>
        	<LinearLayout 
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:orientation="vertical">
            	<ImageButton 
            	    android:id="@+id/play_list_button"
            	    android:layout_width="38dp"
            		android:layout_height="30dp"
            		android:src="@drawable/playlist"
            		android:scaleType="centerCrop"
            		android:background="#00000000"
            		android:layout_gravity="end"
            		android:contentDescription="@string/play"/>
            
        	</LinearLayout>
        
    	</LinearLayout>
        
    </LinearLayout>
   

</LinearLayout>
